add avif to cmake config

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -24,6 +24,7 @@ FIND_PACKAGE( Threads REQUIRED )
 FIND_PACKAGE( OpenSSL REQUIRED )
 FIND_PACKAGE( LibExiv2 0.26.0 REQUIRED )
 FIND_PACKAGE( LibRaw 0.19 REQUIRED )
+FIND_PACKAGE( LibAvif 0.8.4 REQUIRED )
 
 INCLUDE_DIRECTORIES( ${Boost_INCLUDE_DIR} )
 INCLUDE_DIRECTORIES( ${OPENSSL_INCLUDE_DIR} )
@@ -41,6 +42,8 @@ MESSAGE( STATUS "LibRaw_VERSION:       ${LibRaw_VERSION_STRING}"  )
 MESSAGE( STATUS "LibRaw_LIBRARIES:     ${LibRaw_LIBRARIES}"  )
 MESSAGE( STATUS "OpenCV_LIBS:          ${OpenCV_LIBS}"  )
 MESSAGE( STATUS "Boost_LIBRARIES:      ${Boost_LIBRARIES}"  )
+MESSAGE( STATUS "AVIF_VERSION:         ${LibAvif_VERSION_STRING}"  )
+MESSAGE( STATUS "AVIF_LIBRARIES:       ${LibAvif_LIBRARIES}"  )
 
 # Uncomment this for additional console output (warning: may invalidate JSON output)
 #ADD_DEFINITIONS( -DDEBUG=1 )
@@ -67,7 +70,7 @@ else ()
 endif()
 
 
-TARGET_LINK_LIBRARIES( carion ${Boost_LIBRARIES} ${OpenCV_LIBS} ${LibExiv2_LIBRARIES} ${LibRaw_LIBRARIES} ${OPENSSL_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} )
+TARGET_LINK_LIBRARIES( carion ${Boost_LIBRARIES} ${OpenCV_LIBS} ${LibExiv2_LIBRARIES} ${LibRaw_LIBRARIES} ${OPENSSL_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} ${LibAvif_LIBRARIES} )
 
 install(TARGETS carion DESTINATION lib)
 install(FILES carion.h DESTINATION include)
